fix line number alignment

--- a/css/icon-font.less
+++ b/css/icon-font.less
@@ -9,18 +9,6 @@
 	font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-	font-family: 'icomoon';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
 
 .icon-icons_stylus:before {
 	content: "\e600";
